@@ -9,6 +9,11 @@ v 8.11.4
   - Do not enforce using hash with hidden key in CI configuration. !6079
   - Fix hover leading space bug in pipeline graph !5980
   - Do not enforce using hash with hidden key in CI configuration. !6079
+  - Creating an issue through our API now emails label subscribers !5720
+  - Block concurrent updates for Pipeline
+  - Fix resolving conflicts on forks
+  - Fix diff commenting on merge requests created prior to 8.10
+  - Fix issue boards leak private label names and descriptions
 
 v 8.11.3
   - Don't show resolve conflicts link before MR status is updated
